# voicetry

./: .gitignore  AGENTS.md  INSTALLATION.md  README.md  download_piper.py  pyproject.toml  requirements.txt  test_imports.py
.tmp/external-context/kokoro/: kpipeline-usage-guide.md
.tmp/external-context/openai-python/: chat-completions-api.md  message-formats.md  streaming-chat-completions.md
.tmp/external-context/rich/: live-class-reference.md  live-thread-safety.md
.tmp/external-context/sounddevice/: best-practices.md  callback-parameters.md  callbacks-and-tts.md  inputstream-usage.md  sleep-function.md  stream-status.md  synchronous-playback.md  synchronous-recording-patterns.md
.tmp/external-context/whisper/: audio-format.md  model-loading.md  model-sizes.md  transcribe-audio.md
.tmp/sessions/2025-02-23-modular-refactor/: context.md
.tmp/tasks/modular-refactor/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  task.json  (+12 more)
src/: __init__.py  main.py  main_old.py  preimport.py  ui.py
src/audio/: __init__.py  player.py  recorder.py
src/llm/: __init__.py  base.py  deepseek.py
src/llm_processor/: __init__.py  config.py  deepseek.py  interface.py
src/speech_to_text/: __init__.py  config.py  recorder.py  transcriber.py
src/stt/: __init__.py  whisper.py
src/text_to_speech/: __init__.py  base.py  config.py  piper_synthesizer.py  player.py  synthesizer.py  voice_selector.py
src/tts/: __init__.py  kokoro.py
src/ui/: __init__.py  animator.py  config.py  terminal.py  visualizer.py
(+3 files in other folders)
